# mcp-aggregator

./: .env.example  .gitignore  .sessions.json  README.md  main.py  pyproject.toml
.serena/: project.yml
src/: config.py  constants.py  exceptions.py
src/api/: routes.py
src/auth/: middleware.py  service.py  validators.py
src/lifecycle/: cleanup.py
src/tools/: factory.py  registry.py
src/tracking/: manager.py  models.py
src/ui/: routes.py
src/ui/static/css/: style.css
src/ui/templates/: base.html  dashboard.html  login.html  rate_limited.html  tools_browser.html
src/ui/templates/api/: error.html  server_list.html  success.html  tracking_requests.html  tracking_stats.html
src/ui/templates/forms/: http_server.html  service_server.html  stdio_server.html
src/upstream/: defaults.py  manager.py  schemas.py  utils.py
tests/: conftest.py  test_config.py
tests/integration/: test_e2e.py
tests/test_auth/: test_service.py
tests/test_tracking/: test_tracking.py  test_tracking_api.py
tests/test_upstream/: test_manager.py  test_schemas.py  test_utils.py
