[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-aggregator"
version = "0.1.0"
description = "MCP Aggregator - Manage and aggregate multiple MCP servers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.13.0.2",
    "starlette>=0.37.0",
    "uvicorn>=0.28.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]